--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ace/kordar-admin",
+    "name": "ace/kordar-yak",
     "description": "backend manager",
     "type": "yii2-extension",
     "keywords": ["yii2","extension"],
@@ -15,7 +15,7 @@
     },
     "autoload": {
         "psr-4": {
-            "kordar\\admin\\": ""
+            "kordar\\yak\\": ""
         }
     }
 }
